--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
 /* 
     General Styles
 */
+
+.App {
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+.navbar {
+    height: 100%;
+    width: 250px;
+    background-color: teal;
+}
